# libcrails-semantics

./: CMakeLists.txt  README.md  manifest
crails/: buildfile
crails/utils/: join.hpp  semantics.cpp  semantics.hpp  string.hpp
libcrails-semantics/: buildfile
libcrails-semantics/crails/utils/: base64.cpp  base64.hpp  join.hpp  semantics.cpp  semantics.hpp  split.hpp  string.hpp  string_replace.cpp  string_replace.hpp  tokenizer.cpp  tokenizer.hpp
tests/base64/: driver.cpp
tests/join/: buildfile  driver.cpp
tests/semantics/: driver.cpp
tests/split/: driver.cpp
